Fixed white space gap issue of the background of the selected item.

--- a/src/ngx-dropdown-list/dropdown/dropdown.component.scss
+++ b/src/ngx-dropdown-list/dropdown/dropdown.component.scss
@@ -30,7 +30,6 @@
     border-bottom-left-radius: $defaultBorderRadius;
     margin-left: -1px;
     margin-right: -1px;
-    padding-right: 5px;
   }
   .with-filter {
     top: 32px;
